--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=fashion_shop
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.open-in-view=false
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.charset=utf8mb4
+spring.jpa.properties.hibernate.connection.characterEncoding=utf8
+spring.jackson.time-zone=UTC
+
+# JWT
+app.jwt.secret=${JWT_SECRET}
+app.jwt.access-ttl-minutes=${JWT_ACCESS_TOKEN_EXPIRES_IN}
+app.jwt.refresh-ttl-days=${JWT_REFRESH_TOKEN_EXPIRES_IN}
