--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,13 @@ spring.jackson.time-zone=UTC
 app.jwt.secret=${JWT_SECRET}
 app.jwt.access-ttl-minutes=${JWT_ACCESS_TOKEN_EXPIRES_IN}
 app.jwt.refresh-ttl-days=${JWT_REFRESH_TOKEN_EXPIRES_IN}
+
+# Mail configuration
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=2525
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_APP_PASSWORD}
+mail.from.address=${MAIL_FROM_ADDRESS}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp-relay.brevo.com
