--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+server.port=${SERVER_PORT}
 spring.application.name=fashion_shop
+server.servlet.context-path=/shop
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DATABASE_URL}
